--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,29 @@ services:
       MINIO_ROOT_PASSWORD: g35y13tagrgh
     command: server --console-address ":9001" /data
 
+  server:
+    build: .
+    environment:
+      DB_HOST: db
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_NAME: postgres
+      MINIO_HOST: minio
+    ports:
+      - "8000:8000"
+
+  db:
+    image: postgres:15-alpine
+    restart: unless-stopped
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+
 volumes:
-  minio_storage: {}
+  minio_storage:
+  postgres_data:
+
+
